apps/streamie-socket/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamie-socket
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: streamie-socket
