apps/streamie-socket/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamie
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.entrypoints: https
    cert-manager.io/cluster-issuer: cloudflare
spec:
  # tls:
  # - hosts:
  #   - streamie.homelab.dsb.dev
  #   secretName: streamie-tls
  rules:
    - host: streamie-socket.narze.live
      http:
        paths:
          - backend:
              service:
                name: streamie-socket
                port:
                  number: 8888
            path: /
            pathType: Prefix
